errors.txt
shortest_path.cpp:41:36: error: default initialization of an object of const type 'const Graph<int>::node_value_type' (aka 'const int')
        const Graph<int>::node_value_type temp;
                                          ^
In file included from shortest_path.cpp:19:
./Graph.hpp:176:10: error: binding of reference to type 'node_value_type' (aka 'int') to a value of type 'const node_value_type' (aka 'const int') drops qualifiers
                return graph_->nodes_[uid_].v;
                       ^~~~~~~~~~~~~~~~~~~~~~
shortest_path.cpp:46:25: note: in instantiation of member function 'Graph<int>::Node::value' requested here
                        temp = adjacent_node.value();
                                             ^
2 errors generated.
make: *** [shortest_path.o] Error 1
